# pastebin-app

./: BUILD  Dockerfile  MODULE.bazel  README.md  app.py  requirements.in  requirements.txt
.github/workflows/: actions.yml
app/: BUILD.bazel  __main__.py  app.py
