load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("@my_deps//:requirements.bzl", "requirement")
load("@rules_oci//oci:defs.bzl", "oci_load")
load("//:py_oci_image.bzl", "py_oci_image")

py_binary(
    name = "app",
    srcs = [
        "__main__.py",
        "app.py",
    ],
    imports = [".."],
    main = "__main__.py",
    deps = [
        requirement("flask"),
        requirement("flask-httpauth"),
    ],
)

py_oci_image(
    name = "image",
    base = "@ubuntu",
    binary = ":app",
    entrypoint = ["/app/app"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["pastebin-app:latest"],
)
